添加了搜索好友接口
