# component/chum/type.go
@@ -1,0 +1,5 @@
+package chum
+
+type ResChum struct {
+	Name string `json:"name" binding:"required"`
+}
